<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/splash_logo_text"
            android:contentDescription="@string/any_dsc"
            android:layout_marginStart="30dp"/>

        <TextView
            android:id="@+id/promptQ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/are_you_sure_you_want_to_exit_63"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">

        <Button
            android:id="@+id/positiveBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:background="@color/colorPrimaryDark"
            android:textColor="#fff"
            android:textSize="16sp"
            android:textStyle="normal"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/negativeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:background="#efefef"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="normal"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>