<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".HomeActivity">

    <LinearLayout
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFF"
            android:elevation="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="10dp">

            <ImageView
                android:id="@+id/splash_text"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:contentDescription="@string/any_dsc"
                android:src="@mipmap/splash_logo_text"
                android:transitionName="splash_logo_text" />

        </LinearLayout>

        <TextView
            android:id="@+id/screenLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/bmi_measurement"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/human_figure"
            android:src="@drawable/bmi_illustration_pink" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical">

            <!-- Body Weight Section with seekbar -->

            <TextView
                android:id="@+id/bodyweightLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/body_weight"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <SeekBar
                    android:id="@+id/body_weight_seekbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="300" />

                <TextView
                    android:id="@+id/body_weight_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/weight_seekbar_label"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="13sp" />

            </LinearLayout>

            <!-- Height Section with seekbar -->

            <TextView
                android:id="@+id/heightLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:text="@string/height"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <SeekBar
                    android:id="@+id/height_seekbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="70" />

                <TextView
                    android:id="@+id/height_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/height_seekbar_level"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="13sp" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/calculateBtn"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:background="@color/colorPrimaryDark"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/calculate"
            android:textColor="#fff"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textAllCaps="false"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>